--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+::placeholder{
+  color: rgb(109, 106, 106);
+  text-align: center;
+  font-size: 15px;
+}
 
 *{
   margin: 0;
@@ -33,136 +38,184 @@ img{
 }
 .container__main{
   margin-top: 30px;
-  width: 80%;
-  height: 85%;
+  width: 90%;
+  height: 90%;
   background-color: rgba(224, 221, 221, 0.918);
-  display: flex;
-  flex-direction: column;
+  display: inline;
   box-shadow: 0px 0px 10px rgba(0,0, 0, 0.8);
   border-radius: 10px;
+  text-align: center;
 }
-
-.container__title{
+.container__main h1 {
+  padding: 20px;
+}
+.container__subtitle{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 0px;
+  justify-content: space-between;
 }
-
-.container__left__subtitle{
-  margin: 40px 30px;
+.container__subtitle h2{
+  padding: 10px 35px;
+}
+.container__subtitle{
+  display: flex;
+  justify-content: space-around;
+}
+.containers{
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
 }
 .container__left{
-  padding: 0 30px;
+  padding:  30px 30px 0px 30px;
   display: flex;
-  align-items: stretch;
 }
-
 .container__left__rendimento {
   display: inline;
-  margin-right:25px; 
-}
+  margin-right:15px; 
+  text-align: left;
 
+}
 .container__left__rendimento img{
   vertical-align: middle;
   margin-left: 30px;
   margin-bottom: 2px;
 }
 .container__left__rendimento span{
-  color: #777;
+  color: #000;
+  font-weight: bold;
   margin-right: 25px;
+  text-align: start;
 }
-
 .container__left__indexacao {
   display: inline;
+  text-align: left;
 }
-
 .container__left__indexacao img{
   vertical-align: middle;
   margin-left: 30px;
   margin-bottom: 2px;
 }
 .container__left__indexacao span{
-  color: #777;
+  color: #000;
+  font-weight: bold;
   margin-right: 25px;
+  margin-left: 20px;
 }
-
-
-
 .left__form{
   display: flex;
   flex-direction: column;
-  padding: 30px 0px 15px;
+  padding: 30px 0px 0px;
+  align-items: flex-start;
 }
 .left__form input[type="number"]{
   border: none;
   border-bottom: 1px solid #777;
   background: none;
   outline: none;
-  padding: 5px;
+  padding: 0px;
   margin: 15px 0px;
-  border-radius: 5px;
   transition: all ease .5s;
   color: #000;
+  font-size: 18px;
+  padding-left: 10px;
 }
 .left__form input[type="text"]{
   border: none;
   border-bottom: 1px solid #777;
   background: none;
   outline: none;
-  padding: 5px;
   margin: 15px 0px;
-  border-radius: 5px;
   transition: all ease .5s;
   color: #000;
+  font-size: 18px;
+  opacity: 0.6;
+  padding-left: 10px;
 }
-
+#cdi_1, #label1{
+  opacity: 0.6;
+}
+#label2, #label3, #label4, #label5 {
+  font-size: 18px;
+  color: 0;
+}
 .left__form input:focus{
- border-bottom: 1px solid red;
+ border-bottom: 1px solid #F05F17;
 }
-
 .right__form{
   display: flex;
   flex-direction: column;
-  padding: 30px 0px 15px;
+  padding: 30px 20px;
+  align-items: flex-start;
+
 }
 .right__form input[type="number"]{
   border: none;
   border-bottom: 1px solid #777;
   background: none;
   outline: none;
-  padding: 5px;
   margin: 15px 0px;
-  border-radius: 5px;
   transition: all ease .5s;
   color: #000;
+  font-size: 18px;
+  padding-left: 10px;
+
 }
 .right__form input[type="text"]{
   border: none;
   border-bottom: 1px solid #777;
   background: none;
+  padding-left: 10px;
   outline: none;
-  padding: 5px;
   margin: 15px 0px;
-  border-radius: 5px;
   transition: all ease .5s;
   color: #000;
+  font-size: 18px;
+  opacity: 0.6;
+
+}
+
+label{
+  padding-top: 20px;
 }
 .right__form input:focus{
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid #F05F17;
  }
-
- #aporte__inicial::placeholder, #aporte__mensal::placeholder{
-   color: #000;
- }
- 
-
-.container__left__bottom{
+.container__right{
+  opacity: 0;
   display: flex;
-  justify-content: center;
-  width: 400px;
+  flex: 1;
+  transition: all ease .3s;
+  margin-top: 25px;
 }
-.container__left__bottom button{
+.container__info{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 0px 20px;
+}
+.infos{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 200px;
+  height: 80px;
+  background-color: #fff;
+  padding: 8px;
+  margin: 8px 0px;
+  box-shadow: 2px 2px 5px rgb(56, 56, 56);
+}
+.infos p {
+  font-size: 20px;
+}
+.verde {
+  font-weight: bold;
+  font-size: 20px;
+  color: #0B9F1B;
+}
+.container__bottom{
+  padding-left: 30px;
+}
+.container__bottom button{
   border: none;
   border-radius: 10px;
   margin-right: 15px;
@@ -181,7 +234,7 @@ img{
   transition: all ease .2s;
 }
 #btn__clear:hover, #btn__submit:hover{
-  box-shadow: 0px 0px 10px 2px rgb(15, 15, 15);
+  box-shadow: 0px 0px 5px 2px rgb(15, 15, 15);
 }
 .custom__radio{
 vertical-align: middle;
