--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    margin: 0; 
 }
 ::placeholder{
   color: rgb(109, 106, 106);
@@ -28,18 +27,22 @@ img{
     background-size:  100% 100%;
   }
 }
+body{
+  width: 100%;
+  height: 100vh;
+}
 .container__master{
   background:linear-gradient(45deg, #69341C, #E8743F, #888, white) ;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   animation: animation ease 3.5s infinite;
 }
 .container__main{
-  margin-top: 30px;
-  width: 90%;
-  height: 90%;
+  margin-top: 18px;
+  width: 95%;
+  height: 95%;
   background-color: rgba(224, 221, 221, 0.918);
   display: inline;
   box-shadow: 0px 0px 10px rgba(0,0, 0, 0.8);
@@ -51,23 +54,27 @@ img{
 }
 .container__subtitle{
   display: flex;
-  justify-content: space-between;
-}
-.container__subtitle h2{
-  padding: 10px 35px;
-}
-.container__subtitle{
-  display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  margin-left: 30px;
 }
 .containers{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.containers__show{
   display: flex;
   justify-content: start;
   flex-wrap: wrap;
 }
+.container__left h2{
+  padding: 10px 35px;
+}
+
 .container__left{
   padding:  30px 30px 0px 30px;
   display: flex;
+
 }
 .container__left__rendimento {
   display: inline;
@@ -112,7 +119,6 @@ img{
   border-bottom: 1px solid #777;
   background: none;
   outline: none;
-  padding: 0px;
   margin: 15px 0px;
   transition: all ease .5s;
   color: #000;
@@ -158,7 +164,6 @@ img{
   color: #000;
   font-size: 18px;
   padding-left: 10px;
-
 }
 .right__form input[type="text"]{
   border: none;
@@ -171,9 +176,7 @@ img{
   color: #000;
   font-size: 18px;
   opacity: 0.6;
-
 }
-
 label{
   padding-top: 20px;
 }
@@ -181,27 +184,32 @@ label{
   border-bottom: 1px solid #F05F17;
  }
 .container__right{
-  opacity: 0;
-  display: flex;
+  display: none;
+  flex-direction: column;
   flex: 1;
   transition: all ease .3s;
-  margin-top: 25px;
+  margin-top: 20px;
+}
+.container__right h2{
+  padding: 0px 5px 20px;
+  margin-top: -51px;
 }
 .container__info{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding: 0px 20px;
+  padding: 50px 20px 0px 0px;
 }
 .infos{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 200px;
   height: 80px;
   background-color: #fff;
-  padding: 8px;
-  margin: 8px 0px;
+  padding: 5px;
+  margin-left: 10px;
+  margin-bottom: 25px;
   box-shadow: 2px 2px 5px rgb(56, 56, 56);
 }
 .infos p {
@@ -212,12 +220,15 @@ label{
   font-size: 20px;
   color: #0B9F1B;
 }
+
 .container__bottom{
+  display: flex;
+  padding-top: 30px;
   padding-left: 30px;
 }
 .container__bottom button{
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-right: 15px;
   padding: 15px 45px;
   cursor: pointer;
@@ -319,3 +330,275 @@ input[type="radio"]{
 }
 
 
+/*Responsividade*/
+
+@media screen and (max-width:1024px){
+  body{
+    width: 1024px;
+    height: 100%;
+  }
+  .container__master{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+ }
+ .container__main{
+  width: 90%;
+  height: 95%;
+}
+  .container__subtitle {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 10px;
+    margin-bottom: -10px
+  }
+  .containers__show{
+    display: flex; 
+  }
+  .container__left{
+    display: flex;
+  }
+  .custom__radio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .custom__radio_2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container__right{
+    display: none;
+    justify-content: space-around;
+  }
+  .container__right h2{
+    padding: 10px 5px 0px;
+  }
+  .container__info{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .infos{
+    width: 185px;
+    height: 80px;
+  }
+  .container__bottom{
+    justify-content: flex-start;
+    margin-bottom: 30px;
+  }
+  .container__bottom button{
+    padding: 20px 35px;
+  }
+  #btn__clear{
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width:768px){
+  body{
+    width: 768px;
+    height: 100%;
+  }
+  .container__master{
+    width: 100%;
+    height: 100%;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+ }
+ .container__main{
+  width: 90%;
+  height: 95%;
+}
+ .container__subtitle {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: -10px
+}
+.containers__show{
+  display: flex;
+  justify-content: center;
+}
+.container__left{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container__left__indexacao{
+  padding-top: 30px;
+}
+.right__form{
+  padding-top: 35px;
+}
+.custom__radio{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.custom__radio_2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container__right{
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.infos{
+  margin: 10px;
+}
+.container__right h2{
+  padding: 50px 5px 0px;
+}
+.container__bottom{
+  padding: 10px 0px 0px;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.container__bottom button{
+  padding: 20px 35px;
+}
+#btn__clear{
+  margin-left: 20px;
+}
+}
+
+@media screen and (max-width: 425px){
+    body{
+      width: 425px;
+      height: 100%;
+    }
+    .container__master{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+   }
+   .container__main{
+     width: 90%;
+     height: 95%;
+   }
+   .container__subtitle {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+  }
+  .containers__show{
+    display: flex;
+    justify-content: center;
+  }
+  .container__left{
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .custom__radio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto;
+  }
+  .custom__radio_2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto;
+  }
+
+  .container__right{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .infos{
+    margin-bottom: 10px;
+  }
+  .container__right h2{
+    padding: 50px 5px 0px;
+  }
+  .container__bottom{
+    padding: 10px 0px 0px;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .container__bottom button{
+    padding: 20px 35px;
+  }
+  #btn__clear{
+    margin-left: 20px;
+  }
+}
+
+@media  screen and (max-width:320px) {
+  body{
+    max-width: 320px;
+  }
+  .container__subtitle {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+  }
+  .container__master{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .container__main{
+    width: 90%;
+    height: 95%;
+  }
+  .container__left{
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .custom__radio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto;
+  }
+  .custom__radio_2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto;
+  }
+
+  .container__right{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .infos{
+    margin-bottom: 5px;
+  }
+  .container__right h2{
+    padding: 50px 5px 0px;
+  }
+  .container__bottom{
+    padding-top: 10px;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .container__bottom button{
+    padding: 20px;
+  }
+  #btn__clear{
+    margin-left: 20px;
+  }
+}
